--- a/TestCase-WPF-RSS/TestCase-WPF-RSS/ApplicationWindow.xaml
+++ b/TestCase-WPF-RSS/TestCase-WPF-RSS/ApplicationWindow.xaml
@@ -10,7 +10,7 @@
         <TabControl>
             <TabItem Header="Настройки">
                 <Grid Background="#FFE5E5E5">
-                    <TextBox x:Name="ConnectionString" Margin="10,36,10,0" TextWrapping="Wrap" Text="Database Connection..." VerticalAlignment="Top" Height="138"/>
+                    <TextBox x:Name="ConnectionString" Margin="10,36,10,0" TextWrapping="Wrap" Text="Database Connection..." VerticalAlignment="Top" Height="138" KeyUp="ConnectionString_KeyUp"/>
                     <Label x:Name="ConnectionStringLabel" Content="Строка подключения к БД" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
                     <Button x:Name="ConnectionStringSaveButton" Content="Сохранить и применить" HorizontalAlignment="Left" Margin="10,179,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.252,-0.447" Click="ConnectionStringSaveButton_Click"/>
                 </Grid>
