--- a/TestCase-WPF-RSS/TestCase-WPF-RSS/ApplicationWindow.xaml
+++ b/TestCase-WPF-RSS/TestCase-WPF-RSS/ApplicationWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TestCase_WPF_RSS"
         mc:Ignorable="d"
-        Title="ApplicationWindow" Height="450" Width="800" MinHeight="450" MinWidth="800" WindowStartupLocation="CenterScreen" WindowState="Maximized" Icon="/logo.png" Closed="Window_Closed" Loaded="Window_Loaded">
+        Title="Тестовое задание Дмитрия Сидякина для RSS Ltd." Height="450" Width="800" MinHeight="450" MinWidth="800" WindowStartupLocation="CenterScreen" WindowState="Maximized" Icon="/logo.png" Closed="Window_Closed" Loaded="Window_Loaded">
     <Grid>
         <TabControl>
             <TabItem Header="Настройки">
