--- a/TestCase-WPF-RSS/TestCase-WPF-RSS/ApplicationWindow.xaml
+++ b/TestCase-WPF-RSS/TestCase-WPF-RSS/ApplicationWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="Тестовое задание Дмитрия Сидякина для RSS Ltd." Height="450" Width="800" MinHeight="450" MinWidth="800" WindowStartupLocation="CenterScreen" WindowState="Maximized" Icon="/logo.png" Closed="Window_Closed" Loaded="Window_Loaded">
     <Grid>
-        <TabControl>
+        <TabControl SelectedItem="TabControl_Selected" SelectionChanged="TabControl_SelectionChanged">
             <TabItem Header="Настройки">
                 <Grid x:Name="SettingsGrid" Background="#FFE5E5E5">
                     <TextBox x:Name="ConnectionString" Margin="10,36,10,0" TextWrapping="Wrap" Text="Database Connection..." VerticalAlignment="Top" Height="138" KeyUp="ConnectionString_KeyUp"/>
@@ -21,19 +21,16 @@
 
                 </Grid>
             </TabItem>
-            <TabItem x:Name="CreateObjectTab" Header="Создать Объект" IsEnabled="False">
-                <Grid Background="#FFE5E5E5">
-                    <Label Content="Label" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-
+            <TabItem x:Name="ReceivedTabItem" Header="Принят" IsEnabled="True" >
+                <Grid x:Name="ReceivedGrid" Background="#FFE5E5E5">
+                    <Button x:Name="CreateShipmentButton"  Content="Создать" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.126,0.204" Click="CreateShipmentButton_Click"/>
+                    <DataGrid x:Name="ReceivedGrid_DataGrid" Margin="0,49,0,0"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="TabItem" IsEnabled="False">
+            <TabItem Header="Склад" IsEnabled="False">
                 <Grid Background="#FFE5E5E5"/>
             </TabItem>
-            <TabItem Header="TabItem" IsEnabled="False">
-                <Grid Background="#FFE5E5E5"/>
-            </TabItem>
-            <TabItem Header="TabItem" IsEnabled="False">
+            <TabItem Header="Продан" IsEnabled="False">
                 <Grid Background="#FFE5E5E5"/>
             </TabItem>
             <TabItem Header="TabItem" IsEnabled="False">
